<resources>
    <string name="app_name">My Passwords</string>
    <string name="user_name">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="sign_in">Se connecter</string>
    <string name="phone">Téléphone</string>
    <string name="mail_address">Adresse e-mail</string>
    <string name="encrypt_key">Clef de chiffrement</string>
    <string name="create_my_account">Créer mon compte</string>
    <string name="local_only">Local Uniquement</string>
    <string name="local_and_distant_on_server"><![CDATA[Local & distant (sur serveur)]]></string>
    <string name="have_account_sign_in_now">Vous avez déjà un compte ? Connectez-vous maintenant !</string>
    <string name="my_passwords_manager">Mon Gestionnaire des mots de passe</string>
    <string name="not_have_account_create_now">Vous n\'avez pas de compte ? Créez-en un maintenant !</string>
    <string name="confirm_password">Confirmer mot de passe</string>
    <string name="password_and_confirm_password_must_be_identical">Mot de passe et confirmation de mot de passe doivent être identique</string>
    <string name="compete_names">Noms complet</string>
    <string name="username_or_password_incorrect">Nom d\'utilisateur ou mot de passe incorrect</string>
    <string name="my_passwords">Mes mots de passe</string>
    <string name="my_account">Mon compte</string>
    <string name="other_settings">Autres Paramètres</string>
    <string name="about">À-propos</string>
    <string name="my_apps">Mes Applications</string>
    <string name="offline">Offline</string>
    <string name="no_element_found">Aucun élément trouvé</string>
    <string name="adding_new_app">Ajout d\'une nouvelle application en cours...</string>
    <string name="getting_apps">Obtentions de la liste des applications en cours...</string>
    <string name="add_new_app">Ajouter une nouvelle application</string>
    <string name="name_of_the_application">Nom de l\'application</string>
    <string name="new_app_description">Description de l\'application</string>
    <string name="pwd_to_access_this_app">Mot de passe d\'accès à cette application</string>
    <string name="confirm_access_pwd">Confirmer le mot de passe d\'accès</string>
    <string name="add">Ajouter</string>
    <string name="pwd_and_confirmation_must_be_equals">Le mot de passe et la confirmation doivent être identique</string>
    <string name="required_field">Champs obligatoire</string>
    <string name="new_app_added">Nouvelle Application ajoutée</string>
    <string name="adding_the_new_app">Ajout de la nouvelle application en cours</string>
    <string name="back">Retour</string>
    <string name="copied">Copié</string>
    <string name="app_username">Nom de l\'utilisateur (username)</string>
    <string name="your_apps_data_have_been_exported">Les données liées à vos applications ont été exportées en .CSV et stocké à : </string>
    <string name="csv_export">CSV Export</string>
    <string name="csv_import_export">CSV Import/Export</string>
    <string name="an_error_occurred_while_exporting_to_csv">Une erreur s\'est produite lors de l\'exportation. Bien vouloir vérifier que l\'application a les droits de lecture/ecriture</string>
</resources>