<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addAppViewModel"
            type="cm.abimmobiledev.passman.viewmodel.passapp.AddAppViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        app:cardElevation="@dimen/default_card_elevation"
        android:layout_margin="@dimen/default_border_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.passwords.AddAppFormActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:text="@string/add_new_app"
                android:textAlignment="center"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/title_text_size_18"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/element_margin_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/new_app_title"
                />
            <View
                android:layout_width="250dp"
                android:layout_height="1dp"
                android:background="@color/default_text_color"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/new_app_title"
                android:id="@+id/title_underscore"
                />

            <ScrollView
                android:layout_below="@+id/title_underscore"
                android:layout_margin="@dimen/element_margin_medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_of_the_application"
                        android:id="@+id/new_app_name_layout"
                        android:layout_margin="@dimen/default_element_margin"
                        app:hintTextColor="@color/default_text_color"
                        app:boxBackgroundColor="@color/default_input_color"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/new_app_name_input"
                            android:textColor="@color/default_text_color"

                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_app_description"
                        android:id="@+id/new_app_desc_layout"
                        android:layout_margin="@dimen/default_element_margin"
                        app:boxBackgroundColor="@color/default_input_color"
                        app:hintTextColor="@color/default_text_color"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/new_app_desc_input"
                            android:textColor="@color/default_text_color"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/app_username"
                        android:id="@+id/new_app_username_layout"
                        android:layout_margin="@dimen/default_element_margin"
                        app:boxBackgroundColor="@color/default_input_color"
                        app:hintTextColor="@color/default_text_color"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/new_app_username_input"
                            android:textColor="@color/default_text_color"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pwd_to_access_this_app"
                        android:id="@+id/new_app_pwd_layout"
                        android:layout_margin="@dimen/default_element_margin"
                        app:hintTextColor="@color/default_text_color"
                        app:boxBackgroundColor="@color/default_input_color"
                        app:passwordToggleEnabled="true"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/new_app_pwd_input"
                            android:textColor="@color/default_text_color"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_access_pwd"
                        android:id="@+id/new_app_confirm_pwd_layout"
                        android:layout_margin="@dimen/default_element_margin"
                        app:boxBackgroundColor="@color/default_input_color"
                        app:hintTextColor="@color/default_text_color"
                        app:passwordToggleEnabled="true"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/new_app_confirm_pwd_input"
                            android:textColor="@color/default_text_color"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add"
                        android:id="@+id/button_add"
                        />


                </LinearLayout>

            </ScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/element_margin_medium"
                android:src="@drawable/ic_baseline_arrow_back_ios_24_black"
                android:tint="@color/default_text_color"
                app:fabSize="normal"
                android:id="@+id/floating_back"
                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>