<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signInViewModel"
            type="cm.abimmobiledev.passman.viewmodel.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.LoginActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_border_margin"
            app:cardElevation="@dimen/default_card_elevation">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/default_element_margin"
                    android:id="@+id/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo"
                    android:layout_centerHorizontal="true"
                    android:text="Mon Gestionnaire des mots de passe"
                    android:textColor="@color/default_text_color"
                    android:textStyle="bold|italic"
                    android:id="@+id/title_text" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_below="@+id/title_text"
                    android:layout_margin="@dimen/default_element_margin">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:hint="@string/user_name"
                            android:textColorHint="@color/default_text_color"
                            android:layout_marginStart="@dimen/element_margin_medium"
                            android:layout_marginEnd="@dimen/element_margin_medium"
                            android:id="@+id/layout_username">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_username"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:inputType="textEmailAddress"
                                android:text="@={signInViewModel.username}"
                                />

                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:hint="@string/password"
                            app:endIconMode="password_toggle"
                            android:textColorHint="@color/default_text_color"
                            android:layout_marginStart="@dimen/element_margin_medium"
                            android:layout_marginEnd="@dimen/element_margin_medium"
                            android:layout_below="@+id/layout_username"
                            android:id="@+id/layout_password">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_password"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:inputType="textPassword"
                                android:text="@={signInViewModel.password}"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/sign_in"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_below="@+id/layout_password"
                            android:layout_marginStart="@dimen/element_margin_medium"
                            android:layout_marginEnd="@dimen/element_margin_medium"
                            android:text="@string/sign_in"
                            android:onClick="@{()->signInViewModel.onSignInButtonClicked()}"
                            />

                        <TextView
                            android:id="@+id/no_account_sign_up"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/sign_in"
                            android:layout_centerHorizontal="true"
                            android:layout_marginStart="@dimen/element_margin_medium"
                            android:layout_marginTop="@dimen/element_margin_medium"
                            android:layout_marginEnd="@dimen/element_margin_medium"
                            android:layout_marginBottom="@dimen/element_margin_medium"
                            android:text="Vous n'avez pas de compte ? Créez-en un maintenant !"
                            android:textColor="@color/default_text_color"
                            android:onClick="@{()->signInViewModel.onGotoSignUpTextClicked()}"
                            />


                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>